--- a/css/main.css
+++ b/css/main.css
@@ -84,3 +84,31 @@ h2 {
   margin: 0 0 1.5rem;
   font-family: "PT Sans Narrow", sans-serif;
 }
+
+section ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+section ul li {
+  background-color: #ccc;
+  border: 2px solid #afafaf;
+  border-radius: 6px;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+  "top"
+  "middle"
+  "bottom";
+}
+
+section h3 {
+  grid-area: bottom;
+  background-color: rgba(0, 0, 0, .1);
+}
